Test/git-issues/git-issue-551.dfy.expect
git-issue-551.dfy(27,15): Error: a call to a ghost predicate is allowed only in specification contexts (consider declaring the predicate without the 'ghost' keyword)
1 resolution/type errors detected in git-issue-551.dfy
